--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fipps/contao-parallx-bundle",
+  "name": "fipps/contao-parallax-bundle",
   "description": "Contao 4 Parallax Bundle",
   "keywords": [
     "Contao",
@@ -18,8 +18,7 @@
     }
   ],
   "support": {
-    "issues": "https://gitlab.fipps.de/contao/contao4/parallax-bundle/issues",
-    "source": "https://gitlab.fipps.de/contao/contao4/parallax-bundle/tree/master"
+    "issues": "https://gitlab.fipps.de/contao/contao4/parallax-bundle/issues"
   },
   "require": {
     "php": "^5.6|^7.0",
@@ -30,9 +29,6 @@
   },
   "require-dev": {
     "contao/manager-plugin": "^2.0"
-  },
-  "replace": {
-    "fipps/contao-rss-import": "*"
   },
   "autoload": {
     "psr-4": {
