--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -14,18 +14,10 @@ services:
       calls:
       - ["setFramework", ["@contao.framework"]]
 
+    Symfony\Component\DependencyInjection\ContainerAwareInterface:
+      calls:
+      - ["setContainer", ["@service_container"]]
+
   Fipps\ParallaxBundle\:
     resource: '../../*'
     exclude: '../../{Resources,DependencyInjection,ContaoManager}/*'
-
-#  fipps_parallax.service.insert_tags:
-#    class: Fipps\ParallaxBundle\Service\InsertTagsListener
-#    arguments:
-#    - "@contao.framework"
-#    public: true
-#
-#  fipps_parallax.service.hooks:
-#    class: Fipps\ParallaxBundle\Service\HooksListener
-#    arguments:
-#    - "@contao.framework"
-#    public: true
