--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,9 @@
     "Contao",
     "Parallax",
     "Background Image",
-    "bundle"
   ],
   "type": "contao-bundle",
-  "homepage": "https://gitlab.fipps.de:8443/contao/contao4/parallax-bundle",
+  "homepage": "https://gitlab.fipps.de/contao/contao4/parallax-bundle",
   "license": "LGPL-3.0-or-later",
   "authors": [
     {
@@ -18,8 +17,8 @@
     }
   ],
   "support": {
-    "issues": "https://gitlab.fipps.de:8443/contao/contao4/parallax-bundle/issues",
-    "source": "https://gitlab.fipps.de:8443/contao/contao4/parallax-bundle/tree/master"
+    "issues": "https://gitlab.fipps.de/contao/contao4/parallax-bundle/issues",
+    "source": "https://gitlab.fipps.de/contao/contao4/parallax-bundle/tree/master"
   },
   "require": {
     "php": "^5.6|^7.0",
