fix: composer.json

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": [
     "Contao",
     "Parallax",
-    "Background Image",
+    "Background Image"
   ],
   "type": "contao-bundle",
   "homepage": "https://gitlab.fipps.de/contao/contao4/parallax-bundle",
