--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     }
   ],
   "support": {
-    "issues": "https://gitlab.fipps.de/contao/contao4/parallax-bundle/issues",
-    "source": "https://gitlab.fipps.de/contao/contao4/parallax-bundle/tree/master"
+    "issues": "https://gitlab.fipps.de/contao/contao4/parallax-bundle/issues"
   },
   "require": {
     "php": "^5.6|^7.0",
